--- a/.github/workflows/package_installers.yml
+++ b/.github/workflows/package_installers.yml
@@ -16,8 +16,8 @@ on:
 env:
   MACOS_APP_NAME: "GTFS Validator"
   MACOS_NOTARIZATION_NAME: "notarization.zip"
-  MACOS_TARGET_PATH: "app/pkg/build/jpackage/GTFS Validator.app"
-  MACOS_TARGET_PATH_ESCAPED: "app/pkg/build/jpackage/GTFS\ Validator.app"
+  MACOS_TARGET_PATH: "app/pkg/build/jpackage/GTFS\ Validator.app"
+#  MACOS_TARGET_PATH_ESCAPED: "app/pkg/build/jpackage/GTFS\ Validator.app"
   MACOS_TARGET_DEST_PATH: "app/pkg/build/jpackage"
   MACOS_CERTIFICATE: ${{ secrets.MACOS_DEVELOPER_ID_APPLICATION_CERTIFICATE_P12_BASE64 }}
   MACOS_CERTIFICATE_PWD: ${{ secrets.MACOS_DEVELOPER_ID_APPLICATION_CERTIFICATE_PASSWORD }}
