--- a/web/client/.gitignore
+++ b/web/client/.gitignore
@@ -8,4 +8,5 @@ node_modules
 !.env.example
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
-/static/rules.json
+/notice_schema.json
+rules.json
