--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -11,13 +11,24 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    
+      - name: Load secrets from 1Password
+        id: onepw_secrets
+        uses: 1password/load-secrets-action@v1.3.1
+        with:
+            export-env: true # Export loaded secrets as environment variables
+        env:
+            OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
+            MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private key"
+            MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/password"
+            
       - name: Print trucs
         run: |
           echo "Hello World!"
           echo "truc1"
-          echo ${{secrets.MAVEN_GPG_PRIVATE_KEY}} | sed 's/./& /g'
+          echo ${{ env.MAVEN_GPG_PRIVATE_KEY }} | sed 's/./& /g'
           echo "truc2"
-          echo ${{secrets.MAVEN_GPG_PASSPHRASE}} | sed 's/./& /g'
+          echo ${{ env.MAVEN_GPG_PASSPHRASE }} | sed 's/./& /g'
 
 #
 #      - uses: actions/checkout@v3
