--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -21,20 +21,12 @@ jobs:
             OP_SERVICE_ACCOUNT_TOKEN: ${{ secrets.OP_SERVICE_ACCOUNT_TOKEN }} # This is required to connect to the vault in our 1Password account.
             MAVEN_GPG_PRIVATE_KEY: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/Private key"
             MAVEN_GPG_PASSPHRASE: "op://rbiv7rvkkrsdlpcrz3bmv7nmcu/yztcx47yzp4vizjyaq7ulvkgoi/password"
-            
-      - name: Print trucs
-        run: |
-          echo "Hello World!"
-          echo "truc1"
-          echo ${{ env.MAVEN_GPG_PRIVATE_KEY }} | sed 's/./& /g'
-          echo "truc2"
-          echo ${{ env.MAVEN_GPG_PASSPHRASE }} | sed 's/./& /g'
+            SONATYPE_USERNAME: ${{secrets.SONATYPE_USERNAME}}
+            SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
 
-#
-#      - uses: actions/checkout@v3
-#
-#      - id: get_version
-#        uses: battila7/get-version-action@v2
+
+#      - name: Checkout code
+#        uses: actions/checkout@v2
 #
 #      - name: Set up JDK 17
 #        uses: actions/setup-java@v3
@@ -42,15 +34,18 @@ jobs:
 #          java-version: '17'
 #          distribution: 'zulu'
 #
-#      - name: Build
-#        run: ./gradlew build
+#      - name: Import GPG key
+#        run: echo "$MAVEN_GPG_PRIVATE_KEY" | gpg --batch --import
 #
-#      - name: Upload JAR Asset
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ github.event.release.upload_url }}
-#          asset_path: ./cli/build/libs/gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
-#          asset_name: gtfs-validator-${{ steps.get_version.outputs.version-without-v }}-cli.jar
-#          asset_content_type: application/java-archive
+#      - name: Build and Publish
+#        run: ./gradlew publish
+
+      - name: Print trucs
+        run: |
+          echo "Hello World!"
+          echo "truc1"
+          echo $MAVEN_GPG_PASSPHRASE
+          echo "truc2"
+          echo $MAVEN_GPG_PRIVATE_KEY
+
+
