--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -33,11 +33,11 @@ jobs:
         with:
           java-version: '17'
           distribution: 'zulu'
-#
 
       - name: Modify the private key format
         run: |
-          echo "Sonatype username = $SONATYPE_USERNAME"
+          echo "Sonatype username = "
+          echo "$SONATYPE_USERNAME"
           # The key obtained from 1password is flattened, i.e. its on one line. Put it back as multiline
           header="-----BEGIN PGP PRIVATE KEY BLOCK-----"
           footer="-----END PGP PRIVATE KEY BLOCK-----"
