--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -25,17 +25,18 @@ jobs:
             SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
 
 
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v3
-        with:
-          java-version: '17'
-          distribution: 'zulu'
+#      - name: Checkout code
+#        uses: actions/checkout@v2
+#
+#      - name: Set up JDK 17
+#        uses: actions/setup-java@v3
+#        with:
+#          java-version: '17'
+#          distribution: 'zulu'
 
       - name: Modify the private key format
         run: |
+          echo "sonatype username = $SONATYPE_USERNAME"
           # The key obtained from 1password is flattened, i.e. its on one line. Put it back as multiline
           header="-----BEGIN PGP PRIVATE KEY BLOCK-----"
           footer="-----END PGP PRIVATE KEY BLOCK-----"
