--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ plugins {
     id "pl.allegro.tech.build.axion-release" version "1.13.6"
 }
 
+
+
 // Setup and configure properties that are consistent across all projects, including sub-modules.
 allprojects {
     group 'org.mobilitydata'
@@ -86,6 +88,11 @@ allprojects {
 //        }
 //    }
 
+    task printVersion {
+        doLast {
+            println "Project version: ${project.version}"
+        }
+    }
 }
 
 subprojects {
