--- a/build.gradle
+++ b/build.gradle
@@ -91,6 +91,7 @@ allprojects {
     task printVersion {
         doLast {
             println "Project version: ${project.version}"
+            println "My Environment Variable: ${System.getenv('SONATYPE_USERNAME')}"
         }
     }
 }
