--- a/.github/workflows/publish_jars.yml
+++ b/.github/workflows/publish_jars.yml
@@ -35,7 +35,7 @@ jobs:
 
       - name: Modify the private key format
         run: |
-          echo "sonatype username2 = $SONATYPE_NAME"
+          echo "sonatype username2 = $SONATYPE_USERNAME"
           # The key obtained from 1password is flattened, i.e. its on one line. Put it back as multiline
           header="-----BEGIN PGP PRIVATE KEY BLOCK-----"
           footer="-----END PGP PRIVATE KEY BLOCK-----"
@@ -59,11 +59,11 @@ jobs:
       - name: Build and Publish
         run: |
           echo "sonatype username3 = "
-          echo $SONATYPE_NAME
-          echo $SONATYPE_NAME | sed 's/./& /g'
+          echo $SONATYPE_USERNAME
+          echo $SONATYPE_USERNAME | sed 's/./& /g'
           ./gradlew publish -x :model:javadoc --info
         env:
-          SONATYPE_NAME: "mobilitydata"
+          SONATYPE_USERNAME: ${{secrets.SONATYPE_USERNAME}}
           SONATYPE_PASSWORD: ${{secrets.SONATYPE_PASSWORD}}
 
 
