--- a/main/build.gradle
+++ b/main/build.gradle
@@ -113,7 +113,7 @@ publishing {
             url = 'https://s01.oss.sonatype.org/service/local/staging/deploy/maven2'
             //                       mavenLocal()
             credentials {
-                username System.getenv("SONATYPE_NAME")
+                username System.getenv("SONATYPE_USERNAME")
                 password System.getenv("SONATYPE_PASSWORD")
             }
         }
