--- a/.github/workflows/end_to_end.yml
+++ b/.github/workflows/end_to_end.yml
@@ -32,6 +32,11 @@ on:
       - 'web/**'
       - '.github/workflows/**'
   workflow_dispatch:
+
+env:
+  python-version: '3.11'
+  java_version: '11'
+
 jobs:
   validate_gradle_wrapper:
     runs-on: ubuntu-latest
@@ -46,7 +51,7 @@ jobs:
       - name: Set up JDK 11
         uses: actions/setup-java@v3
         with:
-          java-version: '11'
+          java-version: ${{ env.java_version }}
           distribution: 'temurin'
       - name: Cache Gradle packages
         uses: actions/cache@v3
@@ -68,6 +73,9 @@ jobs:
     steps:
       - name: Checkout repository code
         uses: actions/checkout@v3
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.python_version }}
       - name: Install dependencies
         run: |
           pip install -r scripts/mobility-database-harvester/requirements.txt
